# pyfnutils

./: README.md  pyproject.toml  setup.cfg  setup.py
.sourcehut/: arch.yml
pyfnutils/: log.py  parallel.py  zstd.py
src/pyfnutils/: log.py  parallel.py  zstd.py
