[metadata]
name = pyfnutils
version = 1.3
author = Charles E. Vejnar
description = Small utility functions for Python: logging, parallel tasks, zstd
long_description = file: README.md
long_description_content_type = text/markdown
license = Mozilla Public License 2.0 (MPL 2.0)
url = https://github.com/vejnar/pyfnutils

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
